--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "mime-types": "^2.1.35",
-    "multer": "^1.4.5-lts.1"
+    "express": "^4.18.2"
   }
 }
